fixed error with added tags not showing up

--- a/src/components/chat/css/Chat.css
+++ b/src/components/chat/css/Chat.css
@@ -11,6 +11,7 @@
     padding: 10px;
     padding-left: 20px;
     background-color: #F1F0F0;
+    color: #797979;
 }
 
 .chat-title{
