--- a/src/components/notes/css/EditNote.css
+++ b/src/components/notes/css/EditNote.css
@@ -28,6 +28,7 @@ input:focus{
     padding-left: 20px;
     padding-top: 15px;
     font-size: 20px;
+    height: 60vh;
 }
 
 .no-border{
